--- a/CoffeeShop/Views/Cliente/Create.cshtml
+++ b/CoffeeShop/Views/Cliente/Create.cshtml
@@ -4,10 +4,9 @@
     ViewData["Title"] = "Create";
 }
 <body style="background-color: #e5d9be;">
-<h1>Cadastrar Cliente<h1>
+<h1>Cadastrar Cliente</h1>
 
 <h4>Cliente</h4>
-<hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
